--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "chart.js": "^4.4.9",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-grid-layout": "^1.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
